# mainline

./: .coafile  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE.md  MANIFEST.in  README.md  README.rst  circle.yml  conftest.py  mainline.py  pylintrc  pytest.ini  readthedocs_requirements.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  docs.rst  index.rst  mainline.rst
mainline/: __init__.py  catalog.py  di.py  exceptions.py  injection.py  provider.py  scope.py  utils.py
requirements/: install.txt  test.txt
tests/mainline/: conftest.py  test_di.py  test_di_py3.py
